force-app/main/default/main/default/objects/FileExplorerFolder__c/FileExplorerFolder__c.object-meta.xml
<CustomObject>
    <description>Store a hierarchical structure of content documents</description>
    <label>File Explorer Folder</label>
    <nameField>
        <displayFormat>FEF-{0000000}</displayFormat>
        <label>File Explorer Folder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Explorer Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>