force-app/main/default/main/default/objects/FileExplorerFolder__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>FileExplorerFolder__c</referenceTo>
    <relationshipLabel>Folders</relationshipLabel>
    <relationshipName>File_Explorer_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>