force-app/main/default/main/default/objects/FileExplorerFolder__c/fields/TemplateFolderId__c.field-meta.xml
<CustomField>
    <fullName>TemplateFolderId__c</fullName>
    <description>Original folder id used when cloning a template</description>
    <externalId>true</externalId>
    <inlineHelpText>Original folder id used when cloning a template</inlineHelpText>
    <label>Template Folder Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>